bdr.BDR.scala.error
Erreur de compilation :
BDR:2: error: illegal start of simple expression
var fin = false
^BDR:45: error: ')' expected but '}' found.
	}
        ^